MAHOUT-1356: Ensure unit tests fail fast when writing outside mvn target directory (isabel, smarthi, dweiss, frankscholten, akm)
git-svn-id: https://svn.apache.org/repos/asf/mahout/trunk@1580135 13f79535-47bb-0310-9956-ffa450edef68